# routes/api.php
@@ -1,8 +1,6 @@
 <?php
 
 use App\Http\Controllers\Currency\CurrencyController;
-use App\Http\Controllers\User\UserController;
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Auth\AuthController;
 use App\Http\Controllers\Transaction\TransactionController;
@@ -18,9 +16,8 @@ use App\Http\Controllers\Transaction\TransactionController;
 |
 */
 Route::middleware('jwt')->group(function () {
-    Route::apiResource('users', UserController::class);
     Route::apiResource('transactions', TransactionController::class);
-    Route::get('/currencies/{fromCurrency}/{toCurrency}', [CurrencyController::class, 'index']);
+    Route::get('/currencies/{currency}', [CurrencyController::class, 'index']);
 });
 
 Route::post('/signup', [AuthController::class, 'signup']);
